--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "nuxt": "^2.0.0",
     "element-ui": "^2.4.11",
+    "bootstrap": "^4.4.1",
     "@nuxtjs/axios": "^5.3.6"
   },
   "devDependencies": {
@@ -24,6 +25,8 @@
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1"
+    "node-sass": "^4.13.0",
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.0"
   }
 }
