--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "element-ui": "^2.4.11",
+    "@nuxtjs/axios": "^5.3.6",
     "bootstrap": "^4.4.1",
-    "@nuxtjs/axios": "^5.3.6"
+    "element-ui": "^2.4.11",
+    "nuxt": "^2.0.0",
+    "vue-csv-import": "^3.1.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
     "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
