--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@nuxtjs/axios": "^5.3.6",
     "bootstrap": "^4.4.1",
     "element-ui": "^2.4.11",
+    "js-cookie": "^2.2.1",
+    "moment": "^2.24.0",
     "nuxt": "^2.0.0",
-    "vue-csv-import": "^3.1.0"
+    "vue-csv-import": "^3.1.0",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
