--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.24.0",
     "nuxt": "^2.0.0",
     "vue-csv-import": "^3.1.0",
+    "vue-paystack": "^2.0.3",
     "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
